--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@adobe/aio-lib-state": "^1.1.2",
     "@adobe/aio-sdk": "^3.0.0",
     "@adobe/exc-app": "^0.2.21",
+    "@adobe/generator-app-excshell": "^0.2.4",
     "@adobe/react-spectrum": "^3.4.0",
     "@spectrum-icons/workflow": "^3.2.0",
     "cloudevents": "^4.0.2",
@@ -32,5 +33,8 @@
   },
   "engines": {
     "node": "^10 || ^12 || ^14"
-  }
+  },
+  "aio-app-builder-templates": [
+    "@adobe/generator-app-excshell"
+  ]
 }
